[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Tião Nazário <tiaogogo@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
